# devops_automation_template

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
tests/: test_example.py
