[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "devops_automation_template"
version = "0.1.0"
description = "DevOps Automation Template Project"
authors = [
    { name="Duygu Ulu", email="test@example.com" }
]
license = { text="MIT" }
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]
